--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,4 +1,4 @@
-dataSource.url=jdbc:mysql://localhost:3306/yyx-mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+dataSource.url=jdbc:mysql://localhost:3306/exam-admin?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
 dataSource.driverName=com.mysql.cj.jdbc.Driver
 dataSource.username=root
 dataSource.password=root
