完成【试题管理】

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
-      update-strategy: ignored
+      update-strategy: not_null
   configuration:
     auto-mapping-behavior: partial
     map-underscore-to-camel-case: true
