--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
         <velocity.version>2.2</velocity.version>
         <oss.version>3.10.2</oss.version>
         <fastjson.version>1.2.54</fastjson.version>
+        <java-jwt.version>3.2.0</java-jwt.version>
+        <weixin-java-miniapp.version>4.1.0</weixin-java-miniapp.version>
     </properties>
     <dependencies>
         <!--SpringBoot通用依赖模块-->
@@ -158,6 +160,17 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
+        </dependency>
+        <!-- 微信登录token -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>${java-jwt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-miniapp</artifactId>
+            <version>${weixin-java-miniapp.version}</version>
         </dependency>
     </dependencies>
 
